manifests/dev/fileflows/Deployment-fileflows.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: fileflows
    app.kubernetes.io/name: fileflows
    app.kubernetes.io/version: latest
  name: fileflows
  namespace: fileflows
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: fileflows
      app.kubernetes.io/name: fileflows
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: fileflows
        app.kubernetes.io/name: fileflows
    spec:
      automountServiceAccountToken: true
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: Etc/UTC
            - name: FFMPEG_VAAPI
              value: "1"
            - name: LIBVA_DRIVER_NAME
              value: iris
            - name: XDG_RUNTIME_DIR
              value: ""
            - name: LIBVA_DRIVERS_PATH
              value: /usr/lib/x86_64-linux-gnu/dri
            - name: LIBVA_MESSAGING
              value: "1"
          image: revenz/fileflows:latest
          imagePullPolicy: IfNotPresent
          name: fileflows
          ports:
            - containerPort: 5000
              name: http
              protocol: TCP
          securityContext:
            capabilities:
              add:
                - SYS_ADMIN
            privileged: true
          volumeMounts:
            - mountPath: /app/Data
              name: config
            - mountPath: /temp
              name: temp
            - mountPath: /media
              name: media
            - mountPath: /dev/dri
              name: dri
      nodeSelector:
        kubernetes.io/hostname: nixmini
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 0
        runAsUser: 0
        supplementalGroups:
          - 303
      serviceAccountName: default
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: fileflows-fileflows-config
        - name: temp
          persistentVolumeClaim:
            claimName: fileflows-fileflows-temp
        - name: media
          persistentVolumeClaim:
            claimName: fileflows-fileflows-media
        - hostPath:
            path: /dev/dri
            type: Directory
          name: dri
