manifests/dev/fileflows/Service-fileflows.yaml
apiVersion: v1
kind: Service
metadata:
  name: fileflows
  namespace: fileflows
spec:
  ports:
    - name: http
      port: 5000
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: fileflows
    app.kubernetes.io/name: fileflows
  type: ClusterIP
