manifests/dev/fileflows/Ingress-fileflows.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: fileflows
  namespace: fileflows
spec:
  ingressClassName: traefik
  rules:
    - host: fileflows.home.kronkltd.net
      http:
        paths:
          - backend:
              service:
                name: fileflows
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - fileflows.home.kronkltd.net
      secretName: fileflows-tls
